Fix build incompatibility with JDK 11
Deny commit: a20d90d600ea38969049f936cd464f830fb75d02